--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "lil-gui": "^0.19.2",
+    "miniplex": "^2.0.0",
     "three": "^0.164.1"
   }
 }
