Add cool ass character movement

--- a/src/engine/config/config.engine.json
+++ b/src/engine/config/config.engine.json
@@ -5,6 +5,7 @@
       "left": ["ArrowLeft", "KeyA"],
       "backward": ["ArrowDown", "KeyS"],
       "right": ["ArrowRight", "KeyD"],
+      "jump": ["Space"],
       "click": ["Mouse1"]
     }
   }
